# openbot

./: .env.example  .gitignore  .impeccable.md  LICENSE  README.md  README_CN.md  config.example.yaml  config.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
scripts/: openbot-watch.example.sh
src/agent/: agent.py  conversation.py  deep_research.py  prompt_fragments.py  scheduler.py  skill.py  sub_agent.py  verification.py
src/api/: __init__.py  app.py  local_access.py  runtime_status.py  schemas.py  websocket.py
src/application/: __init__.py  bootstrap.py  container.py  lifecycle.py  message_dispatch.py  settings.py
src/channels/: hub.py  markdown.py  types.py
src/core/: config.py  logging.py  model_config.py  monitor.py  monitor_tokens.py  trace.py  user_scope.py
src/identity/: __init__.py  service.py
src/infrastructure/: database.py  database_migrations.py  database_schema.py  embedding.py  event_bus.py  model_gateway.py  model_provider_selector.py  model_routing.py  model_types.py  model_usage.py  reranker.py  storage.py
src/memory/: episodic.py  procedural.py  semantic.py  structured_json.py  working.py
src/platform/: config.py  logging.py
src/tools/: hooks.py  registry.py  runtime.py
tests/: test_main.py
tests/agent/: test_conversation_manager.py  test_deep_research.py  test_guardrails.py  test_harness.py  test_scheduler.py  test_skill.py
tests/api/: test_chat_route.py  test_conversations_route.py  test_frontend_static.py  test_management_routes.py  test_webhook_route.py
tests/channels/: test_feishu.py  test_feishu_api.py  test_feishu_long_connection.py  test_feishu_security.py  test_wechat.py
tests/core/: test_config.py  test_logging.py  test_monitor.py
(+139 files in other folders)
